@@ -28,6 +28,7 @@
 #include "ui_MainWindowBase.h"
 
 #include "ServerConfig.h"
+#include "ServerConnection.h"
 #include "AppConfig.h"
 #include "VersionChecker.h"
 #include "IpcClient.h"
@@ -67,6 +68,7 @@ class MainWindow : public QMainWindow, public Ui::MainWindowBase
     friend class SetupWizard;
     friend class ActivationDialog;
     friend class SettingsDialog;
+    friend class ServerConnection;
 
     public:
         enum qSynergyState
@@ -238,6 +240,7 @@ public slots:
         QMutex              m_StopDesktopMutex;
         bool                m_SecureSocket;             // brief Is the program running a secure socket protocol (SSL/TLS)
         QString             m_SecureSocketVersion;      // brief Contains the version of the Secure Socket currently active
+        ServerConnection    m_serverConnection;
 
         void                updateAutoConfigWidgets();
         
